Updating the mysql2_mysql_enc_to_rb conversion table to 8.0 List (#976)
Also add a check to make sure we do not go out of bounds.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ addons:
   hosts:
     - mysql2gem.example.com
   apt:
+    update: true
     packages:
     - mysql-server-5.6
     - mysql-client-core-5.6
